' Generated by UML Generator
' Encoded: lLTRYnCn57wVNn5ywhfRyRdeuj2MjT3LikqkY8YaCw56fqb9CWLl_zrS9lVCieZuL7foldE-SqlElE42Cj4Vkuf_m-G46Jo2feESrq8mlEy5MZMKRF4F15vMNt2BG8DPqw6gqbfWmtgqX_oUO6a7Gmv-LW1S2iJ5JGzP2zc7EMG7o1QqwO-82DWXFhcOWJF5hTKq6XlKuQQNHil7MyHm0FrTLN3F1OEDC7p1d1A126vftRUOdZ7lOQVPJ7_A60LkVWCPYMGv0vW8y5h68yy45dr7Ps0heoK79MbxQHHJejMKu808Of4ARjrXYnbg16NXyLGnBz6PnDwkGEJh2iIUv75Y_48PFY2nqsPKBfpJI-x4iPCWcHAv61mgh8b00PqquXCZRpItpESWZfd7o5KRU5CSXgWoM-uWYziNtTHwHSwoCV01jfIP6XDwt3EKLI5KdCGwDfdlj3GZCuWJJD2Pr8W2eAEtGySJPR25XfkmVxbh6tJ2dCg-y19Drm4d2UOAn0XBVccbSK6zE855XN7U4dGWJsWyCNu_x2u1C9gVe2f8MguPWz_Nc8jNORskNLgylT49Mf9RJ7f1-HD7wGg4f2vyHc0-LaeOQSVj7GMZqEFXNC83G_8oYzeopCOiQcrfQqzfXo3nkQrL58_slDRuVyrkxst3IN9Nzrr82Ye-SParHLzVQ-8VLZVXuUR5YBC4M7aAYofTcq3Y4hjGR6rD-g6Xe_-KogYVimNQFPYqDP30BanQ9st3NJ1ztgEJ-WGwQt-TmOZ0-CipLsfPzemqCX5dRXr74sSmYiTcqT-4H8w-Obgw1RqJdZjvKWgpf-L6jW1bDMk-u3CrwypqxdvNVwxlvczN3-y_RvRhrVn-NMzjg7ALU7QooykBXf-VPPZjycwrZ01ShpDbxSNx-VtjyjskNiUODjYX75BN_s1sBRz2EJupe0Es9zTXNGneMAmCeK7TzLD1FzhaGae3rf-7u2RVyM9YNiblUWaNhv9kawbZNyvRHFe7rGYcaXr2ggTbgyhsT-bpIXFTvz98lv59R_39DFlmD9wG78lY9M1gTEsKYY-hFYazsFhWiMSaCr_O__J18ftsr4jfYpF8ub9cA9VkJ1icB8WBbyIHgbsToKHp-1LDZkPtTBypNnLwStxmY_obM-IF49E9x0HkBNpybDcOGza9z43L8ivevrV5iwhqp7U6ksutOqFZDBRb8N7dYqV7mNnCXDVBBBbk_DT3JdwIyjQzYWbkC6J1DzDqk47TeneS3MKeVMfPc7zASfm9FpqSWC6IbYEBdt-oLC6cE9t-kYv-n8LAT3gDDgJARH_ZSAUYm7fyA__wZiEyZiAvYQvAVVLSQlX-Acae6vR8g89pEQhXKp7A8-ceDuYqylF-3m
' URL: http://www.plantuml.com/plantuml/uml/lLTRYnCn57wVNn5ywhfRyRdeuj2MjT3LikqkY8YaCw56fqb9CWLl_zrS9lVCieZuL7foldE-SqlElE42Cj4Vkuf_m-G46Jo2feESrq8mlEy5MZMKRF4F15vMNt2BG8DPqw6gqbfWmtgqX_oUO6a7Gmv-LW1S2iJ5JGzP2zc7EMG7o1QqwO-82DWXFhcOWJF5hTKq6XlKuQQNHil7MyHm0FrTLN3F1OEDC7p1d1A126vftRUOdZ7lOQVPJ7_A60LkVWCPYMGv0vW8y5h68yy45dr7Ps0heoK79MbxQHHJejMKu808Of4ARjrXYnbg16NXyLGnBz6PnDwkGEJh2iIUv75Y_48PFY2nqsPKBfpJI-x4iPCWcHAv61mgh8b00PqquXCZRpItpESWZfd7o5KRU5CSXgWoM-uWYziNtTHwHSwoCV01jfIP6XDwt3EKLI5KdCGwDfdlj3GZCuWJJD2Pr8W2eAEtGySJPR25XfkmVxbh6tJ2dCg-y19Drm4d2UOAn0XBVccbSK6zE855XN7U4dGWJsWyCNu_x2u1C9gVe2f8MguPWz_Nc8jNORskNLgylT49Mf9RJ7f1-HD7wGg4f2vyHc0-LaeOQSVj7GMZqEFXNC83G_8oYzeopCOiQcrfQqzfXo3nkQrL58_slDRuVyrkxst3IN9Nzrr82Ye-SParHLzVQ-8VLZVXuUR5YBC4M7aAYofTcq3Y4hjGR6rD-g6Xe_-KogYVimNQFPYqDP30BanQ9st3NJ1ztgEJ-WGwQt-TmOZ0-CipLsfPzemqCX5dRXr74sSmYiTcqT-4H8w-Obgw1RqJdZjvKWgpf-L6jW1bDMk-u3CrwypqxdvNVwxlvczN3-y_RvRhrVn-NMzjg7ALU7QooykBXf-VPPZjycwrZ01ShpDbxSNx-VtjyjskNiUODjYX75BN_s1sBRz2EJupe0Es9zTXNGneMAmCeK7TzLD1FzhaGae3rf-7u2RVyM9YNiblUWaNhv9kawbZNyvRHFe7rGYcaXr2ggTbgyhsT-bpIXFTvz98lv59R_39DFlmD9wG78lY9M1gTEsKYY-hFYazsFhWiMSaCr_O__J18ftsr4jfYpF8ub9cA9VkJ1icB8WBbyIHgbsToKHp-1LDZkPtTBypNnLwStxmY_obM-IF49E9x0HkBNpybDcOGza9z43L8ivevrV5iwhqp7U6ksutOqFZDBRb8N7dYqV7mNnCXDVBBBbk_DT3JdwIyjQzYWbkC6J1DzDqk47TeneS3MKeVMfPc7zASfm9FpqSWC6IbYEBdt-oLC6cE9t-kYv-n8LAT3gDDgJARH_ZSAUYm7fyA__wZiEyZiAvYQvAVVLSQlX-Acae6vR8g89pEQhXKp7A8-ceDuYqylF-3m
' Generated on: 2026-05-25T11:13:48.336138926

@startuml
skinparam classAttributeIconSize 0
hide circle

class PruebasUnitarias {
  +testGuardarYCargarDocumentales(): void
  +testCargarPeliculas(): void
  +testCargarSeries(): void
}

abstract class ContenidoAudiovisual {
  -{static} contar: int = 0
  -titulo: String
  -duracion: int
  -genero: String
  -id: int
  -director: String
  --
  +ContenidoAudiovisual(titulo: String, duracion: int, genero: String, director: String)
  +getTitulo(): String
  +setTitulo(titulo: String): void
  +getDuracion(): int
  +setDuracion(duracion: int): void
  +getGenero(): String
  +setGenero(genero: String): void
  +getId(): int
  +getDirector(): String
  +setDirector(director: String): void
}

class Investigador {
  -nombre: String
  --
  +Investigador(nombre: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +toString(): String
}

class Temporada {
  -temporadas: int
  -episodios: int
  --
  +Temporada(temporadas: int, episodios: int)
  +getEpisodios(): int
  +setEpisodios(episodios: int): void
  +getTemporadas(): int
  +setTemporadas(temporadas: int): void
  +toString(): String
}

class Documental {
  -tema: String
  -investigadores: ArrayList<Investigador>
  --
  +Documental(titulo: String, duracionEnMinutos: int, genero: String, director: String, tema: String)
  +getTema(): String
  +setTema(tema: String): void
  +getInvestigadores(): ArrayList<Investigador>
  +agregarInvestigador(investigador: Investigador): boolean
}

class Actor {
  -nombre: String
  --
  +Actor(nombre: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +toString(): String
}

class Pelicula {
  -estudio: String
  -actores: ArrayList<Actor>
  --
  +Pelicula(titulo: String, duracionEnMinutos: int, genero: String, director: String, estudio: String)
  +getEstudio(): String
  +setEstudio(estudio: String): void
  +getActores(): ArrayList<Actor>
  +agregarActor(actor: Actor): boolean
}

class SerieDeTV {
  -canal: String
  -listaTemporadas: ArrayList<Temporada>
  --
  +SerieDeTV(titulo: String, duracionEnMinutos: int, genero: String, canal: String, director: String)
  +getCanal(): String
  +setCanal(canal: String): void
  +getListaTemporadas(): ArrayList<Temporada>
  +agregarTemporada(numero: int, episodios: int): void
  +setListaTemporadas(listaTemporadas: ArrayList<Temporada>): void
}

class GestorArchivos {
  -RUTA_ARCHIVO_PELICULAS: String = "peliculas.csv"
  -RUTA_ARCHIVO_SERIES: String = "series.csv"
  -RUTA_ARCHIVO_DOCUMENTALES: String = "documentales.csv"
  --
  +guardarPeliculas(peliculas: List<Pelicula>): void
  +guardarSeries(series: List<SerieDeTV>): void
  +guardarDocumentales(documentales: List<Documental>): void
  +cargarPeliculas(): List<Pelicula>
  +cargarSeries(): List<SerieDeTV>
  +cargarDocumentales(): List<Documental>
}

class MenuVista {
  -leer: Scanner
  --
  +MenuVista()
  +menuPrincipal(): int
  +pedirActores(): ArrayList<String>
  +pedirTemporadas(): int
  +pedirEpisodios(): int
  +pedirInvestigadores(): ArrayList<String>
  +pedirTitulo(): String
  +pedirDuracionEnMinutos(): int
  +pedirGenero(): String
  +pedirDirector(): String
  +pedirEstudio(): String
  +pedirTema(): String
  +pedirCanal(): String
  +mostrarMensaje(mensaje: String): void
}

class PruebaAudioVisual {
  +{static} main(args: String[]): void
}

class CatalogoControlador {
  -vista: MenuVista
  -listaPeliculas: List<Pelicula>
  -listaSeries: List<SerieDeTV>
  -listaDocumentales: List<Documental>
  -gestorArchivos: GestorArchivos
  --
  +CatalogoControlador(vista: MenuVista)
  +iniciar(): void
  -agregarPelicula(): void
  -mostrarPeliculas(): void
  -agregarSerieDeTV(): void
  -mostrarSeriesDeTV(): void
  -agregarDocumental(): void
  -mostrarDocumentales(): void
}

Documental --|> ContenidoAudiovisual
Documental o-- Investigador
Pelicula --|> ContenidoAudiovisual
Pelicula o-- Actor
SerieDeTV --|> ContenidoAudiovisual
SerieDeTV o-- Temporada
CatalogoControlador *-- MenuVista
CatalogoControlador o-- Pelicula
CatalogoControlador o-- SerieDeTV
CatalogoControlador o-- Documental
CatalogoControlador *-- GestorArchivos
@enduml